--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -2,6 +2,15 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
+	display: flex;
+}
+
+.dinogotchi_screen.inside {
+	justify-content: center;
+}
+
+.dinogotchi_screen.outside {
+	justify-content: flex-start;
 }
 
 .dinogotchi_screen__background {
@@ -15,56 +24,56 @@
 	opacity: 0;
 }
 
-.dinogotchi_screen__background #cloud_one {
-	animation-name: dinogotchi_screen__background__cloud_one;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_one {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_one;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dinogotchi_screen__background #cloud_two {
-	animation-name: dinogotchi_screen__background__cloud_two;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_two {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_two;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dinogotchi_screen__background #cloud_three {
-	animation-name: dinogotchi_screen__background__cloud_three;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_three {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_three;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dinogotchi_screen__background #cloud_four {
-	animation-name: dinogotchi_screen__background__cloud_four;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_four {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_four;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dinogotchi_screen__background #cloud_five {
-	animation-name: dinogotchi_screen__background__cloud_five;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_five {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_five;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dinogotchi_screen__background #cloud_six {
-	animation-name: dinogotchi_screen__background__cloud_one;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_six {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_one;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dinogotchi_screen__background #cloud_seven {
-	animation-name: dinogotchi_screen__background__cloud_one;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_seven {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_one;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dinogotchi_screen__background #cloud_eight {
-	animation-name: dinogotchi_screen__background__cloud_four;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_eight {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_four;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
 
-.dinogotchi_screen__background #cloud_nine {
-	animation-name: dinogotchi_screen__background__cloud_two;
+.dinogotchi_screen__background #dinogotchi__inside__cloud_nine {
+	animation-name: dinogotchi_screen__background__dinogotchi__inside__cloud_two;
 	animation-timing-function: linear;
 	animation-fill-mode: forwards;
 }
@@ -118,6 +127,8 @@
 
 .dinogotchi_screen__header {
 	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .dinogotchi_screen__header svg {
@@ -146,7 +157,12 @@
 	height: 4rem;
 }
 
-@keyframes dinogotchi_screen__background__cloud_one {
+.dinogotchi_screen__background .painting {
+	transform-box: fill-box;
+	transform-origin: top;
+}
+
+@keyframes dinogotchi_screen__background__dinogotchi__inside__cloud_one {
 	from {
 		transform: translate3d(-300%, 0, 0);
 	}
@@ -155,7 +171,7 @@
 	}
 }
 
-@keyframes dinogotchi_screen__background__cloud_two {
+@keyframes dinogotchi_screen__background__dinogotchi__inside__cloud_two {
 	from {
 		transform: translate3d(-100%, 0, 0);
 	}
@@ -164,7 +180,7 @@
 	}
 }
 
-@keyframes dinogotchi_screen__background__cloud_three {
+@keyframes dinogotchi_screen__background__dinogotchi__inside__cloud_three {
 	from {
 		transform: translate3d(-500%, 0, 0);
 	}
@@ -173,7 +189,7 @@
 	}
 }
 
-@keyframes dinogotchi_screen__background__cloud_four {
+@keyframes dinogotchi_screen__background__dinogotchi__inside__cloud_four {
 	from {
 		transform: translate3d(-425%, 0, 0);
 	}
@@ -182,7 +198,7 @@
 	}
 }
 
-@keyframes dinogotchi_screen__background__cloud_five {
+@keyframes dinogotchi_screen__background__dinogotchi__inside__cloud_five {
 	from {
 		transform: translate3d(-150%, 0, 0);
 	}
