--- a/src/views/kids_space/dino_runner/styles.css
+++ b/src/views/kids_space/dino_runner/styles.css
@@ -1,30 +1,43 @@
-body {
-    background-color: #FFE1ED;
-    background-size:75px 100px;
-    margin: 0;
-    display: flex;
+
+.dino_runner_game {
+	background:
+	radial-gradient(circle at 100% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent),
+	radial-gradient(circle at 0% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent) 0 -50px;
+	background-size:75px 100px;
+	background-color: #FFE1ED;
+  width: 100vw;
+  height: 100vh;
 }
 
-#grid {
+.dino_runner_game__grid {
     position: absolute;
-    background-color: #1E344B;
     width: 100vw;
     height: 40vh;
     margin-top: 20vh;
     padding: 1rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+		z-index: 2;
 }
 
-#dino {
-    position: absolute;
-    bottom: 0;
+.dino_runner_game__grid__character {
     width: 25vmin;
     height: 25vmin;
     max-width: 150px;
     max-height: 150px;
-    background-image: url('./fear.svg');
+    background-image: url('../../../assets/kids_space/dino_runner/fear.svg');
 }
 
-#start_game_button {
+.dino_runner_game__obstacle {
+    width: 15vmin;
+    height: 15vmin;
+    max-width: 100px;
+    max-height: 100px;
+    background-image: url('../../../assets/kids_space/dino_runner/bacteria.svg');
+}
+
+.dino_runner_game__start_game_button {
     position: absolute;
     top: 80vh;
     left: 35vw;
@@ -39,12 +52,197 @@ body {
     border-radius: 0.5rem;
 }
 
-.obstacle {
+.dino_runner_game__grid__background {
     position: absolute;
-    bottom: 0;
-    width: 20vmin;
-    height: 20vmin;
-    max-width: 100px;
-    max-height: 100px;
-    background-image: url('./bacteria.svg');
+    background-color: #1E344B;
+    width: auto;
+    height: 40vh;
+    margin: 0;
+    margin-top: 20vh;
+    z-index: 1;
 }
+
+.dino_runner_game__grid__background .star {
+	transform-box: fill-box;
+	visibility: hidden;
+}
+
+.dino_runner_game__score_board_container {
+	position: absolute;
+	top: 2rem;
+	width: 100vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.dino_runner_game__score_board {
+	background-color: var(--snake-game-score-background-color);
+	width: 5rem;
+	height: 5rem;
+	border-radius: 50%;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.dino_runner_game__score_board p {
+	font-size: var(--very-large-font);
+	font-weight: bold;
+	margin-bottom: 0;
+}
+
+.dino_runner_game__grid__background #star_one {
+  animation-name: dino_runner_game__grid__background__start_one_and_four;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_two {
+  animation-name: dino_runner_game__grid__background__start_two;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_three {
+  animation-name: dino_runner_game__grid__background__start_three;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_four {
+  animation-name: dino_runner_game__grid__background__start_one_and_four;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_five {
+  animation-name: dino_runner_game__grid__background__start_five;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_six {
+  animation-name: dino_runner_game__grid__background__start_six;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_seven {
+  animation-name: dino_runner_game__grid__background__start_seven;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_eight {
+  animation-name: dino_runner_game__grid__background__start_eight;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_nine {
+  animation-name: dino_runner_game__grid__background__start_nine;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_ten {
+  animation-name: dino_runner_game__grid__background__start_ten_and_eleven;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_eleven {
+  animation-name: dino_runner_game__grid__background__start_ten_and_eleven;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+.dino_runner_game__grid__background #star_eleven {
+	animation-name: dino_runner_game__grid__background__start_ten_and_eleven;
+	animation-timing-function: linear;
+	animation-fill-mode: forwards;
+}
+
+@keyframes dino_runner_game__grid__background__start_one_and_four {
+	from {
+		transform: translate3d(4000%, 0, 0);
+	}
+	to {
+		transform: translate3d(-500%, 0, 0);
+	}
+}
+
+@keyframes dino_runner_game__grid__background__start_two {
+	from {
+		transform: translate3d(2000%, 0, 0);
+	}
+	to {
+		transform: translate3d(-2000%, 0, 0);
+	}
+}
+
+@keyframes dino_runner_game__grid__background__start_three {
+	from {
+		transform: translate3d(3000%, 0, 0);
+	}
+	to {
+		transform: translate3d(-2000%, 0, 0);
+	}
+}
+
+@keyframes dino_runner_game__grid__background__start_five {
+	from {
+		transform: translate3d(3000%, 0, 0);
+	}
+	to {
+		transform: translate3d(-2000%, 0, 0);
+	}
+}
+
+@keyframes dino_runner_game__grid__background__start_six {
+	from {
+		transform: translate3d(2000%, 0, 0);
+	}
+	to {
+		transform: translate3d(-2000%, 0, 0);
+	}
+}
+
+@keyframes dino_runner_game__grid__background__start_seven {
+	from {
+		transform: translate3d(1000%, 0, 0);
+	}
+	to {
+		transform: translate3d(-4000%, 0, 0);
+	}
+}
+
+@keyframes dino_runner_game__grid__background__start_eight {
+	from {
+		transform: translate3d(1000%, 0, 0);
+	}
+	to {
+		transform: translate3d(-4000%, 0, 0);
+	}
+}
+
+@keyframes dino_runner_game__grid__background__start_nine {
+	from {
+		transform: translate3d(500%, 0, 0);
+	}
+	to {
+		transform: translate3d(-4000%, 0, 0);
+	}
+}
+
+@keyframes dino_runner_game__grid__background__start_ten_and_eleven {
+	from {
+		transform: translate3d(-500%, 0, 0);
+	}
+	to {
+		transform: translate3d(-5000%, 0, 0);
+	}
+}
+
